Add trivial implementation of Android app

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /ios/SlideRehearser.xcodeproj/project.xcworkspace/xcuserdata
 /ios/SlideRehearser.xcodeproj/xcuserdata
 /common/slideparser/build
+slideparser-debug.aar
