--- a/common/gradle.properties
+++ b/common/gradle.properties
@@ -1,2 +1,1 @@
-#konan.home=/Users/civetta/Downloads/kotlin-native-macos-0.5
-konan.home=/Users/civetta/Works/Personal/kotlin-native-master/dist
+konan.home=CHANGE_ME
