--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /ios/SlideRehearser.xcodeproj/xcuserdata
 /common/slideparser/build
 slideparser-debug.aar
+common/slideparser-ios/build
+common/slideparser-android/build
